--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2"
+    "karma-phantomjs-launcher": "^1.0.2",
+    "bower": "^1.7.7",
+    "http-server": "^0.9.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "protractor": "^4.0.9"
   }
 }
